--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,6 +42,14 @@
                   {%- endif -%}
                 </a>
               </li>
+              <!-- vitae -->
+              <li class="nav-item {% if page.url contains 'vitae' %}active{% endif %}">
+                <a class="nav-link" href="{{ '/assets/pdf/PratyushVarshney.pdf' | relative_url }}">vitae
+                  {%- if page.title == "vitae" -%}
+                  <span class="sr-only">(current)</span>
+                  {%- endif -%}
+                </a>
+              </li>
               {%- endif %}
 
               <!-- Other pages -->
