--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -40,6 +40,7 @@ layout: default
             <!-- Selected papers -->
             {%- include selected_papers.html %}
           {%- endif %}
+          {%- include education.html %}
           {%- if page.social %}
           <!-- Social -->
           <div class="social">
