--- a/_includes/education.html
+++ b/_includes/education.html
@@ -9,12 +9,12 @@
                 <tr>
                   <table class="table table-borderless"> 
                     <tr> 
-                      <td> <div class="education-insti"> {{ item.institution}}</div></td>
-                      <td>{{item.location}}</td>
+                      <td> <div class="education-insti"> <i class="fas fa-university"></i>&nbsp;&nbsp;{{ item.institution}}</div></td>
+                      <td><i class="fas fa-map-marker"></i>&nbsp;&nbsp;{{item.location}}</td>
                     </tr>
                     <tr> 
-                      <td>{{ item.degree}} in {{item.major}}</td>
-                      <td>{{item.from}} - {{item.to}}</td>
+                      <td><i class="fas fa-user-graduate"></i>&nbsp;&nbsp;{{ item.degree}} in {{item.major}}</td>
+                      <td><i class="fas fa-calendar fa-sm"></i>&nbsp; {{item.from}} - {{item.to}}</td>
                     </tr>
                     <tr>
                       <td>
