--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -208,6 +208,9 @@ blockquote {
 }
 
 // Education
+.education {
+  padding: 10px;
+}
 .education table td {
   font-size: 1rem;
   padding: 4px;
@@ -221,6 +224,7 @@ blockquote {
 
 .education-break {
   border-bottom: 1px solid var(--global-divider-color);
+  margin-bottom: 15px;
 }
 
 .education-insti {
