--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -612,3 +612,66 @@ html.transition *:after {
   color: var(--global-text-color-light);
   margin-bottom: 30px;
 }
+
+// Extra Markdown style (post Customization)
+.tech-post {
+  .post-meta{
+    color: var(--global-text-color-light);
+    font-size: 0.875rem;
+    margin-bottom: 0;
+  }
+  .post-tags{
+    color: var(--global-text-color-light);
+    font-size: 0.875rem;
+    padding-bottom: 1rem;
+    a {
+      color: var(--global-text-color-light);
+      text-decoration: none;
+      &:hover {
+        color: var(--global-theme-color);
+      }
+    }
+  }
+  .post-content{
+        blockquote {
+          border-left: 5px solid var(--global-theme-color);
+          padding: 1px;
+      }
+}
+}
+
+.tech-post-category{
+  color: #{$purple-color};
+  font-size: 1.75rem;
+  border-bottom: 2px solid var(--global-divider-color);
+  padding: 1px;
+  // text-align: center;
+}
+
+.tech-post-list {  
+  margin: 0;
+  padding: 0;
+  li {
+    // border-bottom: 1px solid var(--global-divider-color);
+    list-style: none;
+    // padding-top: 1rem;  
+    // padding-bottom: 2rem;
+    .post-meta {
+      color: var(--global-text-color-light);
+      font-size: 0.875rem;
+      margin-bottom: 0;
+    }
+    .post-tags {
+      color: var(--global-text-color-light);
+      font-size: 0.875rem;
+      padding-top: 0rem;
+    }
+    a {
+      color: var(--global-text-color);
+      text-decoration: none;
+      &:hover {
+        color: var(--global-theme-color);
+      }
+    }
+  }
+}
