--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,11 @@ layout: parse
 
     <!-- Footer -->
     {%- include footer.html %}
+
+    <script type="module">
+      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.js';
+      mermaid.initialize({ startOnLoad: true });
+    </script>
   </body>
 
   {% include scripts/jquery.html %}
