--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,11 @@ layout: parse
     <!-- Footer -->
     {%- include footer.html %}
 
-    <script type="module">
-      import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.js';
-      mermaid.initialize({ startOnLoad: true });
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        mermaid.initialize({ startOnLoad: true });
+      });
     </script>
   </body>
 
